Best Practice File

--- a/Peta Wisata/CMakeLists.txt
+++ b/Peta Wisata/CMakeLists.txt
@@ -2,7 +2,14 @@ cmake_minimum_required(VERSION 3.10)
 
 project(PETA_WISATA)
 
-file(GLOB_RECURSE SOURCES "src/*.cpp")
-add_executable(PETA_WISATA ${SOURCES})
 
-target_include_directories(PETA_WISATA PUBLIC "src")
+add_executable(PETA_WISATA
+    src/main.cpp
+    src/djikstraAlgorithm.cpp
+    src/loadGraph.cpp
+    src/mergeSort.cpp
+)
+
+target_include_directories(PETA_WISATA PUBLIC 
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+)
