--- a/Peta Wisata/CMakeLists.txt
+++ b/Peta Wisata/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(PETA_WISATA)
+project(PETA_WISATA LANGUAGES CXX)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 
 add_executable(PETA_WISATA
